gccida/g1/load_pic_register
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/load_pic_register/src/i386.c:4384:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 3916, "load_pic_register"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/load_pic_register/src/i386.c:4391:35: error: use of undeclared identifier 'machine_mode'
v2 = gen_rtx_fmt_s( SYMBOL_REF, ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), pic_label_name); 
                                  ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/load_pic_register/src/obj/i386.o] Error 1
